--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,181 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./Favicon.svg" type="image/x-icon" />
     <link href="/public/output.css" rel="stylesheet" />
     <title>Abstract</title>
   </head>
   <body class="debug-screens">
     <header>
-      <nav></nav>
+      <nav>
+        <ul>
+          <li>
+            <a href="https://www.abstract.com/">
+              <svg
+                width="149"
+                height="35"
+                viewBox="0 0 149 35"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g clip-path="url(#clip0_2_3)">
+                  <path
+                    d="M53.2116 8.27225L45.7281 26.7978H49.5537L51.1443 22.4665H58.9351L60.4996 26.7978H64.3531L57.149 8.27225H53.2116ZM52.0103 19.8433C53.7424 15.3038 54.4409 13.4663 55.0816 11.6043C56.0035 14.3063 56.9534 16.8263 58.0616 19.8433H52.0103Z"
+                    fill="white"
+                  />
+                  <path
+                    d="M73.3583 13.475C72.5159 13.465 71.683 13.6421 70.9273 13.9918C70.1715 14.3415 69.5144 14.854 69.0093 15.4875V8.27225H65.7351V26.7978H68.8622V25.0915C69.814 26.3778 71.0972 27.0603 72.997 27.0603C76.4314 27.0603 78.7223 24.5403 78.7223 20.2633C78.7223 15.9863 76.627 13.475 73.3583 13.475ZM72.1868 24.5C70.1194 24.5 68.9181 22.9005 68.9181 20.125C68.9181 17.633 70.315 16.058 72.2985 16.058C74.161 16.058 75.3139 17.6593 75.3139 20.2825C75.3139 23.0458 74.1145 24.4877 72.1868 24.4877V24.5Z"
+                    fill="white"
+                  />
+                  <path
+                    d="M85.5893 15.7028C86.9322 15.7028 87.9938 16.3853 88.6922 17.542L91.1265 15.9915C89.8954 14.1523 87.8541 13.3665 85.6452 13.3665C82.2052 13.3665 80.2439 15.2583 80.2439 17.3075C80.2439 19.3043 81.6129 20.4873 83.7659 21.1173L85.2559 21.5635C87.3531 22.1935 87.828 22.561 87.828 23.429C87.828 24.2165 87.0458 24.7958 85.6191 24.7958C84.0807 24.7958 82.7956 24.0065 82.0692 22.666L79.525 24.241C80.6984 25.8965 82.6279 27.1845 85.485 27.1845C88.953 27.1845 91.1042 25.424 91.1042 23.0055C91.1042 20.9055 89.7073 19.8275 87.2469 19.0908L85.7569 18.6708C83.9671 18.1458 83.5219 17.7783 83.5219 16.9908C83.5219 16.2033 84.185 15.7028 85.5893 15.7028Z"
+                    fill="white"
+                  />
+                  <path
+                    d="M97.7459 22.75V16.2015H100.439V13.7392H97.7459V9.4675H94.4921L94.4288 13.7392H92.2534V16.2015H94.4288V23.359C94.4288 24.57 94.6262 25.4922 95.2129 26.124C95.7996 26.7557 96.7029 27.0707 98.0681 27.0707C98.8926 27.0684 99.7135 26.9691 100.512 26.775V24.325C100.081 24.4747 99.6262 24.5546 99.167 24.5612C98.1538 24.57 97.7459 24.0975 97.7459 22.75Z"
+                    fill="white"
+                  />
+                  <path
+                    d="M105.417 15.75V13.7392H102.288V26.8642H105.566V20.7392C105.566 19.3392 105.812 18.4152 106.295 17.7327C106.902 16.9137 107.77 16.4185 109.275 16.4343C109.681 16.4408 110.085 16.4997 110.474 16.6093V13.7392C110.087 13.6221 109.682 13.5631 109.275 13.5642C107.349 13.5695 106.259 14.3342 105.417 15.75Z"
+                    fill="white"
+                  />
+                  <path
+                    d="M123.027 23.275V18.55C123.027 16.499 122.735 15.4227 121.867 14.6597C120.936 13.818 119.6 13.398 117.699 13.398C114.145 13.398 111.903 14.973 111.679 17.815L114.818 18.0775C114.985 16.632 115.739 15.8165 117.447 15.8165C118.315 15.8165 118.986 15.9915 119.377 16.3677C119.768 16.744 119.91 17.2095 119.91 17.9427V18.6427C117.699 18.7757 115.013 19.1432 113.642 19.7207C111.992 20.4312 111.096 21.5355 111.096 23.2207C111.096 25.5605 112.886 27.0602 115.432 27.0602C117.418 27.0602 118.928 26.404 119.992 25.1947C120.295 26.502 121.275 26.985 123.026 26.985C123.531 26.9945 124.035 26.9235 124.516 26.775V24.78C123.257 24.9935 123.037 24.2987 123.027 23.275ZM119.91 21.3045C119.88 22.0395 119.742 22.7762 119.293 23.3817C118.678 24.248 117.643 24.7485 116.384 24.7485C114.929 24.7485 114.257 24.038 114.257 23.093C114.257 22.3563 114.592 21.8557 115.46 21.4882C116.44 21.042 118.315 20.7777 119.91 20.699V21.3045Z"
+                    fill="white"
+                  />
+                  <path
+                    d="M132.003 24.5998C129.852 24.5998 128.565 23.0772 128.565 20.1897C128.565 17.276 130.019 15.9372 131.917 15.9372C133.23 15.9372 134.236 16.5147 134.629 18.2472L137.564 17.3022C136.92 14.966 135.02 13.3647 131.999 13.3647C127.835 13.3647 125.207 15.9635 125.207 20.2422C125.207 24.5472 127.779 27.1722 131.831 27.1722C134.998 27.1722 136.836 25.5973 137.648 23.4185L134.713 22.4735C134.379 23.8647 133.485 24.5998 132.003 24.5998Z"
+                    fill="white"
+                  />
+                  <path
+                    d="M143.873 22.75V16.2015H146.564V13.7392H143.873V9.4675H140.619L140.561 13.7392H138.384V16.2015H140.567V23.359C140.567 24.57 140.764 25.4922 141.351 26.124C141.937 26.7557 142.841 27.0707 144.206 27.0707C145.026 27.0674 145.843 26.9681 146.636 26.775V24.325C146.206 24.4745 145.752 24.5544 145.294 24.5612C144.284 24.57 143.873 24.0975 143.873 22.75Z"
+                    fill="#FFFBFB"
+                  />
+                  <path
+                    d="M18.7125 -3.43039e-05C3.81255 -0.0367843 0.0782355 3.45446 0.039123 17.4545C1.05346e-05 31.4545 3.71384 34.9632 18.6138 35C33.5138 35.0367 37.25 31.5455 37.2891 17.5455C37.3282 3.54547 33.6125 0.0367157 18.7125 -3.43039e-05ZM15.6078 27.0707C14.1976 27.0707 12.8192 26.6778 11.6467 25.9417C10.4743 25.2056 9.56045 24.1594 9.02082 22.9353C8.4812 21.7112 8.34001 20.3643 8.61511 19.0648C8.8902 17.7653 9.56924 16.5717 10.5663 15.6348C11.5634 14.6979 12.8338 14.0599 14.2168 13.8014C15.5999 13.543 17.0334 13.6756 18.3362 14.1826C19.6389 14.6897 20.7524 15.5483 21.5358 16.6499C22.3193 17.7516 22.7374 19.0468 22.7374 20.3717C22.7349 22.1477 21.983 23.8503 20.6465 25.1061C19.3099 26.3619 17.4979 27.0684 15.6078 27.0707ZM28.5577 26.796H25.0655V11.4852H8.76866V8.20397H28.5577V26.796Z"
+                    fill="white"
+                  />
+                  <path
+                    d="M15.6078 16.954C14.8883 16.954 14.1851 17.1544 13.5869 17.53C12.9887 17.9055 12.5225 18.4393 12.2472 19.0638C11.9719 19.6883 11.8998 20.3755 12.0402 21.0385C12.1805 21.7015 12.527 22.3105 13.0357 22.7885C13.5444 23.2664 14.1925 23.592 14.8981 23.7238C15.6037 23.8557 16.3351 23.788 16.9998 23.5293C17.6644 23.2707 18.2325 22.8326 18.6322 22.2706C19.0319 21.7085 19.2452 21.0477 19.2452 20.3718C19.2442 19.4656 18.8607 18.5968 18.1787 17.9561C17.4968 17.3153 16.5722 16.9549 15.6078 16.954Z"
+                    fill="white"
+                  />
+                </g>
+                <defs>
+                  <clipPath id="clip0_2_3">
+                    <rect width="149" height="35" fill="white" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="./index.html">| Help Center</a>
+          </li>
+        </ul>
+        <button>Submit a request</button>
+        <button>Sign in</button>
+      </nav>
     </header>
+    <main>
+      <section>
+        <h1>How can we help?</h1>
+        <input type="search" name="" id="" />
+      </section>
+      <section>
+        <div>
+          <p>Using Abstract</p>
+          <p>
+            Abstract lets you manage, version, and document your designs in one
+            place.
+          </p>
+          <a href="#">Learn More</a>
+        </div>
+        <div>
+          <p>Manage your account</p>
+          <p>
+            Configure your account settings, such as your email, profile
+            details, and password.
+          </p>
+          <a href="#">Learn More</a>
+        </div>
+        <div>
+          <p>Manage organizations, teams, and projects</p>
+          <p>
+            Use Abstract organizations, teams, and projects to organize your
+            people and your work.
+          </p>
+          <a href="#">Learn More</a>
+        </div>
+        <div>
+          <p>Manage billing</p>
+          <p>Change subscriptions and payment details.</p>
+          <a href="#">Learn More</a>
+        </div>
+        <div>
+          <p>Authenticate to Abstract</p>
+          <p>Set up and configure SSO, SCIM, and Just-in-Time provisioning.</p>
+          <a href="#">Learn More</a>
+        </div>
+        <div>
+          <p>Abstract support</p>
+          <p>Get in touch with a human.</p>
+          <a href="#">Learn More</a>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div>
+        <p>Abstract</p>
+        <a href="#">Start Trial</a>
+        <a href="#">Pricing</a>
+        <a href="#">Download</a>
+      </div>
+      <div>
+        <p>Resources</p>
+        <a href="#">Blog</a>
+        <a href="#">Help Center</a>
+        <a href="#">Release Notes</a>
+        <a href="#">Status</a>
+      </div>
+      <div>
+        <p>Community</p>
+        <a href="#">Twitter</a>
+        <a href="#">LinkedIn</a>
+        <a href="#">Facebook</a>
+        <a href="#">Dribble</a>
+        <a href="#">Podcast</a>
+      </div>
+      <div>
+        <p>Company</p>
+        <a href="#">About Us</a>
+        <a href="#">Careers</a>
+        <a href="#">Legal</a>
+      </div>
+      <p>Contact Us</p>
+      <a href="#">info@abstract.com</a>
+      <div>
+        <svg
+          width="37"
+          height="35"
+          viewBox="0 0 37 35"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M18.3358 -3.43039e-05C3.73577 -0.0367843 0.0766484 3.45446 0.0383234 17.4545C-1.55756e-06 31.4545 3.63905 34.9632 18.239 35C32.839 35.0367 36.5 31.5455 36.5383 17.5455C36.5767 3.54547 32.9358 0.0367157 18.3358 -3.43039e-05ZM15.2935 27.0707C13.9118 27.0707 12.5611 26.6778 11.4122 25.9417C10.2634 25.2056 9.36795 24.1594 8.83918 22.9353C8.31042 21.7112 8.17207 20.3643 8.44163 19.0648C8.7112 17.7653 9.37656 16.5717 10.3536 15.6348C11.3306 14.6979 12.5754 14.0599 13.9306 13.8014C15.2857 13.543 16.6904 13.6756 17.967 14.1826C19.2435 14.6897 20.3346 15.5483 21.1022 16.6499C21.8699 17.7516 22.2796 19.0468 22.2796 20.3717C22.2772 22.1477 21.5404 23.8503 20.2307 25.1061C18.9211 26.3619 17.1456 27.0684 15.2935 27.0707ZM27.9827 26.796H24.5609V11.4852H8.5921V8.20397H27.9827V26.796Z"
+            fill="black"
+          />
+          <path
+            d="M15.2935 16.954C14.5886 16.954 13.8995 17.1544 13.3133 17.53C12.7272 17.9055 12.2704 18.4393 12.0006 19.0638C11.7308 19.6883 11.6602 20.3755 11.7978 21.0385C11.9353 21.7015 12.2748 22.3105 12.7732 22.7885C13.2717 23.2664 13.9068 23.592 14.5982 23.7238C15.2896 23.8557 16.0062 23.788 16.6575 23.5293C17.3088 23.2707 17.8654 22.8326 18.2571 22.2706C18.6487 21.7085 18.8577 21.0477 18.8577 20.3718C18.8568 19.4656 18.4809 18.5968 17.8127 17.9561C17.1445 17.3153 16.2385 16.9549 15.2935 16.954Z"
+            fill="black"
+          />
+        </svg>
+        <p>
+          © Copyright 2024<br />
+          Abstract Studio Design, Inc.<br />
+          All rights reserved
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
