--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./Favicon.svg" type="image/x-icon" />
+    <link rel="shortcut icon" href="./Favicon.svg " type="image/x-icon" />
     <link href="/public/output.css" rel="stylesheet" />
     <title>Abstract</title>
   </head>
   <body class="debug-screens">
     <header>
-      <nav>
+      <nav class="bg-black">
         <ul>
           <li>
             <a href="https://www.abstract.com/">
@@ -71,7 +71,7 @@
             </a>
           </li>
           <li>
-            <a href="./index.html">| Help Center</a>
+            <a class="text-xl text-white" href="./index.html">| Help Center</a>
           </li>
         </ul>
         <button>Submit a request</button>
@@ -80,7 +80,7 @@
     </header>
     <main>
       <section>
-        <h1>How can we help?</h1>
+        <h1 class="font-GT-America">manage How can we help?</h1>
         <input type="search" name="" id="" />
       </section>
       <section>
