--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
     </header>
     <main>
       <section>
-        <h1 class="font-GT-America">manage How can we help?</h1>
+        <h1 class="text-7xl font-GT-America">How can we help?</h1>
         <input type="search" name="" id="" />
       </section>
       <section>
