--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,14 @@
   </head>
   <body class="debug-screens">
     <header>
-      <nav class="flex items-center justify-center py-4 bg-black">
+      <nav class="flex py-4 bg-black">
         <ul class="flex flex-row">
-          <li>
+          <li class="flex items-center">
             <a href="https://www.abstract.com/">
               <svg
-                width="160"
-                height="50"
-                viewBox="0 9 126 10"
+                width="144"
+                height="35"
+                viewBox="9 1 90 28"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
               >
@@ -83,13 +83,11 @@
               </svg>
             </a>
           </li>
-          <li>
+          <li class="flex items-center">
             <a class="text-xl text-white" href="./index.html">| Help Center</a>
           </li>
         </ul>
-        <a class="w-20 ml-56 mr-6 bg-blue-200 h-14" href="#"
-          >Submit a request</a
-        >
+        <a class="mr-6 bg-blue-200 w-14 h-14" href="#">Submit a request</a>
         <a class="bg-blue-200 h-14 w-14" href="#">Sign In</a>
       </nav>
     </header>
