--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="debug-screens">
     <header class="text-white font-GT-America">
-      <nav class="flex py-4 bg-black">
+      <nav class="flex w-full py-4 bg-black">
         <ul class="flex flex-row">
           <li class="flex items-center justify-center">
             <a class="ml-200" href="https://www.abstract.com/">
@@ -79,8 +79,8 @@
         </ul>
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="mt-[.8rem]"
-          viewBox="0 0 29 29"
+          class="mt-[.3rem] lg:hidden"
+          viewBox="0 0 26 26"
           width="50"
           height="50"
           fill="none"
@@ -115,10 +115,10 @@
             style="stroke: rgb(255, 255, 255)"
           ></line>
         </svg>
-        <a class="hidden mr-6 bg-blue-200 w-14 h-14" href="#"
+        <a class="hidden mr-6 bg-blue-200 lg:inline w-14 h-14" href="#"
           >Submit a request</a
         >
-        <a class="hidden bg-blue-200 h-14 w-14" href="#">Sign In</a>
+        <a class="hidden bg-blue-200 lg:inline h-14 w-14" href="#">Sign In</a>
       </nav>
     </header>
     <main class="font-GT-America">
