--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       <nav class="flex w-full py-4 bg-black">
         <ul class="flex flex-row">
           <li class="flex items-center justify-center">
-            <a class="ml-200" href="https://www.abstract.com/">
+            <a class="ml-4" href="https://www.abstract.com/">
               <svg
                 width="140"
                 height="40"
@@ -71,8 +71,10 @@
             </a>
           </li>
           <li class="flex items-center">
-            <span class="ml-1 text-[2rem] font-extralight">|</span>
-            <a class="mr-500 mt-1 ml-1 text-[1.62rem]" href="./index.html"
+            <span class="ml-[.52rem] text-[2rem] font-extralight">|</span>
+            <a
+              class="mt-1 ml-1 text-[1.57rem] font-GT-America"
+              href="./index.html"
               >Help Center</a
             >
           </li>
@@ -80,7 +82,7 @@
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="mt-[.3rem] lg:hidden"
-          viewBox="0 0 26 26"
+          viewBox="0 0 27 27"
           width="50"
           height="50"
           fill="none"
