fix purge warning

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link href="/public/output.css" rel="stylesheet" />
     <title>Abstract</title>
   </head>
-  <body class="debug-screens">
+  <body>
     <header class="text-white font-GT-America">
       <nav class="flex w-full py-4 bg-black">
         <ul class="flex flex-row">
@@ -16,7 +16,7 @@
               <svg
                 width="140"
                 height="40"
-                viewBox="0 4 72 10"
+                viewBox="0 4 78 10"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
               >
