fix tailwind config warnings

--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,14 @@
   </head>
   <body>
     <header class="text-white font-GT-America">
-      <nav class="flex w-full py-4 bg-black">
+      <nav class="flex w-full py-5 bg-black">
         <ul class="flex flex-row">
           <li class="flex items-center justify-center">
             <a class="ml-4" href="https://www.abstract.com/">
               <svg
-                width="140"
+                width="130"
                 height="40"
-                viewBox="0 4 78 10"
+                viewBox="0 4 73 10"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
               >
@@ -71,20 +71,47 @@
             </a>
           </li>
           <li class="flex items-center">
-            <span class="ml-[.52rem] text-[2rem] font-extralight">|</span>
-            <a
-              class="mt-1 ml-1 text-[1.57rem] font-GT-America"
-              href="./index.html"
+            <span class="text-[2rem] ml-[.45rem] mr-[.5rem] font-thin">|</span>
+            <a class="mt-1 m text-[1.45rem] font-semibold" href="./index.html"
               >Help Center</a
             >
           </li>
         </ul>
+        <div>
+          <svg
+            class="ml-24"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 45 45"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="feather feather-search"
+          >
+            <circle
+              cx="11"
+              cy="11"
+              r="8"
+              id="id_101"
+              style="stroke: rgb(255, 255, 255)"
+            ></circle>
+            <line
+              x1="21"
+              y1="21"
+              x2="16.65"
+              y2="16.65"
+              id="id_102"
+              style="stroke: rgb(255, 255, 255)"
+            ></line>
+          </svg>
+        </div>
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="mt-[.3rem] lg:hidden"
-          viewBox="0 0 27 27"
-          width="50"
-          height="50"
+          class="mt-[.4rem] lg:hidden"
+          width="36"
+          height="36"
+          viewBox="0 0 23 23"
           fill="none"
           stroke="currentColor"
           stroke-width="2"
@@ -125,7 +152,7 @@
     </header>
     <main class="font-GT-America">
       <section>
-        <h1 class="text-7xl font-GT-America">How can we help?</h1>
+        <h1 class="text-7xl">How can we help?</h1>
         <input type="search" name="" id="" />
       </section>
       <section>
