--- a/src/index.html
+++ b/src/index.html
@@ -77,11 +77,10 @@
             >
           </li>
         </ul>
-        <div>
+        <div class="mt-[.57rem] ml-[5.5rem] mr-[.4rem] size-9">
           <svg
-            class="ml-24"
             xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 45 45"
+            viewBox="0 0 29 29"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
