Add divs for svgs

--- a/src/index.html
+++ b/src/index.html
@@ -13,61 +13,63 @@
         <ul class="flex flex-row">
           <li class="flex items-center justify-center">
             <a class="ml-4" href="https://www.abstract.com/">
-              <svg
-                width="130"
-                height="40"
-                viewBox="0 4 73 10"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g clip-path="url(#clip0_10_2)">
-                  <path
-                    d="M24.792 4.32L21.0566 14.2285H22.9661L23.7601 11.9119H27.6488L28.4297 14.2285H30.3532L26.7573 4.32H24.792ZM24.1923 10.5088C25.0569 8.08085 25.4055 7.09808 25.7253 6.10217C26.1855 7.54733 26.6596 8.89517 27.2128 10.5088H24.1923Z"
-                    fill="white"
-                  />
-                  <path
-                    d="M34.8481 7.10273C34.4276 7.09738 34.0119 7.1921 33.6346 7.37914C33.2573 7.56619 32.9294 7.8403 32.6773 8.17913V4.32H31.0429V14.2285H32.6038V13.3159C33.0789 14.0039 33.7194 14.3689 34.6677 14.3689C36.3819 14.3689 37.5255 13.0211 37.5255 10.7335C37.5255 8.44589 36.4796 7.10273 34.8481 7.10273ZM34.2633 12.9995C33.2314 12.9995 32.6318 12.144 32.6318 10.6595C32.6318 9.32666 33.329 8.48426 34.3191 8.48426C35.2487 8.48426 35.8241 9.3407 35.8241 10.7438C35.8241 12.2217 35.2255 12.993 34.2633 12.993V12.9995Z"
-                    fill="white"
-                  />
-                  <path
-                    d="M40.9531 8.29426C41.6233 8.29426 42.1533 8.6593 42.5019 9.27799L43.7169 8.4487C43.1025 7.46496 42.0835 7.0447 40.981 7.0447C39.2639 7.0447 38.2849 8.05651 38.2849 9.15257C38.2849 10.2205 38.9683 10.8533 40.0429 11.1902L40.7866 11.4289C41.8334 11.7659 42.0705 11.9624 42.0705 12.4267C42.0705 12.8479 41.68 13.1577 40.9679 13.1577C40.2 13.1577 39.5586 12.7356 39.196 12.0186L37.9261 12.861C38.5118 13.7465 39.4749 14.4354 40.901 14.4354C42.632 14.4354 43.7058 13.4937 43.7058 12.2002C43.7058 11.077 43.0085 10.5004 41.7804 10.1064L41.0367 9.88171C40.1433 9.60091 39.9211 9.40435 39.9211 8.98315C39.9211 8.56195 40.2521 8.29426 40.9531 8.29426Z"
-                    fill="white"
-                  />
-                  <path
-                    d="M47.021 12.0635V8.56102H48.3652V7.24407H47.021V4.95929H45.3968L45.3652 7.24407H44.2794V8.56102H45.3652V12.3893C45.3652 13.037 45.4638 13.5302 45.7566 13.8681C46.0494 14.206 46.5003 14.3745 47.1817 14.3745C47.5933 14.3733 48.0031 14.3202 48.4017 14.2163V12.9059C48.1865 12.986 47.9595 13.0288 47.7303 13.0323C47.2245 13.037 47.021 12.7842 47.021 12.0635Z"
-                    fill="white"
-                  />
-                  <path
-                    d="M50.8499 8.31953V7.24407H49.2881V14.2641H50.9243V10.9881C50.9243 10.2393 51.0471 9.74506 51.2882 9.38002C51.5911 8.94197 52.0244 8.67708 52.7756 8.68551C52.9783 8.68903 53.18 8.7205 53.3741 8.77911V7.24407C53.1809 7.1814 52.9788 7.14985 52.7756 7.15044C51.8143 7.15327 51.2702 7.56231 50.8499 8.31953Z"
-                    fill="white"
-                  />
-                  <path
-                    d="M59.6398 12.3443V9.81713C59.6398 8.72013 59.4941 8.14449 59.0608 7.7364C58.5961 7.28618 57.9293 7.06154 56.9804 7.06154C55.2065 7.06154 54.0873 7.90394 53.9755 9.42401L55.5424 9.56441C55.6257 8.79127 56.0021 8.35509 56.8546 8.35509C57.2879 8.35509 57.6228 8.44869 57.818 8.64993C58.0131 8.85117 58.084 9.10015 58.084 9.49233V9.86673C56.9804 9.93787 55.6397 10.1344 54.9554 10.4433C54.1318 10.8233 53.6846 11.4139 53.6846 12.3153C53.6846 13.5667 54.578 14.3689 55.8488 14.3689C56.8401 14.3689 57.5939 14.0179 58.1249 13.3711C58.2762 14.0703 58.7654 14.3286 59.6394 14.3286C59.8914 14.3338 60.143 14.2957 60.3831 14.2163V13.1493C59.7546 13.2635 59.6449 12.8919 59.6398 12.3443ZM58.084 11.2904C58.069 11.6835 58.0001 12.0776 57.7761 12.4014C57.469 12.8647 56.9525 13.1324 56.324 13.1324C55.5978 13.1324 55.2624 12.7524 55.2624 12.247C55.2624 11.8529 55.4295 11.5852 55.8628 11.3887C56.352 11.15 57.2879 11.0087 58.084 10.9665V11.2904Z"
-                    fill="white"
-                  />
-                  <path
-                    d="M64.1202 13.0529C63.0465 13.0529 62.4041 12.2386 62.4041 10.6942C62.4041 9.13572 63.1299 8.41968 64.0772 8.41968C64.7326 8.41968 65.2347 8.72856 65.4309 9.6552L66.8959 9.14976C66.5745 7.9002 65.6261 7.04373 64.1182 7.04373C62.0398 7.04373 60.728 8.43372 60.728 10.7222C60.728 13.0248 62.0118 14.4288 64.0343 14.4288C65.6151 14.4288 66.5325 13.5864 66.9378 12.4211L65.4729 11.9156C65.3061 12.6598 64.8599 13.0529 64.1202 13.0529Z"
-                    fill="white"
-                  />
-                  <path
-                    d="M70.0451 12.0635V8.56102H71.388V7.24407H70.0451V4.95929H68.4211L68.3919 7.24407H67.3052V8.56102H68.3946V12.3893C68.3946 13.037 68.4931 13.5302 68.7865 13.8681C69.0786 14.206 69.5296 14.3745 70.2116 14.3745C70.6205 14.3727 71.028 14.3196 71.424 14.2163V12.9059C71.2094 12.9859 70.9832 13.0286 70.7543 13.0323C70.2503 13.037 70.0451 12.7842 70.0451 12.0635Z"
-                    fill="#FFFBFB"
-                  />
-                  <path
-                    d="M8.81232 0.000147151C1.78086 -0.0187525 0.0186013 1.77672 0.000143779 8.9766C-0.0183138 16.1765 1.73428 17.9809 8.76573 17.9999C15.7972 18.0187 17.5603 16.2233 17.5788 9.0234C17.5972 1.82352 15.8437 0.0190468 8.81232 0.000147151ZM7.34719 13.922C6.68167 13.922 6.03119 13.72 5.47788 13.3414C4.92461 12.9628 4.49336 12.4248 4.23869 11.7953C3.98405 11.1658 3.91742 10.473 4.04724 9.80474C4.17706 9.13644 4.4975 8.52264 4.96803 8.04074C5.43857 7.55892 6.03808 7.23082 6.69073 7.0979C7.34346 6.96501 8.01992 7.0332 8.6347 7.29396C9.24949 7.55474 9.77495 7.99632 10.1447 8.56282C10.5144 9.12938 10.7117 9.79553 10.7117 10.4769C10.7105 11.3902 10.3557 12.2658 9.72496 12.9116C9.09421 13.5575 8.23911 13.9208 7.34719 13.922ZM13.4584 13.7807H11.8103V5.90674H4.1197V4.21928H13.4584V13.7807Z"
-                    fill="white"
-                  />
-                  <path
-                    d="M7.22452 8.64C6.86541 8.64 6.51441 8.74721 6.21582 8.94809C5.91723 9.1489 5.68454 9.43445 5.54712 9.76846C5.40971 10.1025 5.37372 10.47 5.4438 10.8246C5.51383 11.1792 5.68678 11.505 5.9407 11.7606C6.19461 12.0162 6.51811 12.1904 6.8703 12.2609C7.22249 12.3314 7.58758 12.2952 7.91932 12.1568C8.25107 12.0185 8.53465 11.7842 8.73415 11.4836C8.93364 11.183 9.04015 10.8295 9.04015 10.468C9.0396 9.98338 8.84819 9.51869 8.50782 9.17597C8.16745 8.83325 7.7059 8.6405 7.22452 8.64Z"
-                    fill="white"
-                  />
-                </g>
-                <defs>
-                  <clipPath id="clip0_10_2">
-                    <rect width="72" height="18" fill="white" />
-                  </clipPath>
-                </defs>
-              </svg>
+              <div>
+                <svg
+                  width="130"
+                  height="40"
+                  viewBox="0 4 73 10"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g clip-path="url(#clip0_10_2)">
+                    <path
+                      d="M24.792 4.32L21.0566 14.2285H22.9661L23.7601 11.9119H27.6488L28.4297 14.2285H30.3532L26.7573 4.32H24.792ZM24.1923 10.5088C25.0569 8.08085 25.4055 7.09808 25.7253 6.10217C26.1855 7.54733 26.6596 8.89517 27.2128 10.5088H24.1923Z"
+                      fill="white"
+                    />
+                    <path
+                      d="M34.8481 7.10273C34.4276 7.09738 34.0119 7.1921 33.6346 7.37914C33.2573 7.56619 32.9294 7.8403 32.6773 8.17913V4.32H31.0429V14.2285H32.6038V13.3159C33.0789 14.0039 33.7194 14.3689 34.6677 14.3689C36.3819 14.3689 37.5255 13.0211 37.5255 10.7335C37.5255 8.44589 36.4796 7.10273 34.8481 7.10273ZM34.2633 12.9995C33.2314 12.9995 32.6318 12.144 32.6318 10.6595C32.6318 9.32666 33.329 8.48426 34.3191 8.48426C35.2487 8.48426 35.8241 9.3407 35.8241 10.7438C35.8241 12.2217 35.2255 12.993 34.2633 12.993V12.9995Z"
+                      fill="white"
+                    />
+                    <path
+                      d="M40.9531 8.29426C41.6233 8.29426 42.1533 8.6593 42.5019 9.27799L43.7169 8.4487C43.1025 7.46496 42.0835 7.0447 40.981 7.0447C39.2639 7.0447 38.2849 8.05651 38.2849 9.15257C38.2849 10.2205 38.9683 10.8533 40.0429 11.1902L40.7866 11.4289C41.8334 11.7659 42.0705 11.9624 42.0705 12.4267C42.0705 12.8479 41.68 13.1577 40.9679 13.1577C40.2 13.1577 39.5586 12.7356 39.196 12.0186L37.9261 12.861C38.5118 13.7465 39.4749 14.4354 40.901 14.4354C42.632 14.4354 43.7058 13.4937 43.7058 12.2002C43.7058 11.077 43.0085 10.5004 41.7804 10.1064L41.0367 9.88171C40.1433 9.60091 39.9211 9.40435 39.9211 8.98315C39.9211 8.56195 40.2521 8.29426 40.9531 8.29426Z"
+                      fill="white"
+                    />
+                    <path
+                      d="M47.021 12.0635V8.56102H48.3652V7.24407H47.021V4.95929H45.3968L45.3652 7.24407H44.2794V8.56102H45.3652V12.3893C45.3652 13.037 45.4638 13.5302 45.7566 13.8681C46.0494 14.206 46.5003 14.3745 47.1817 14.3745C47.5933 14.3733 48.0031 14.3202 48.4017 14.2163V12.9059C48.1865 12.986 47.9595 13.0288 47.7303 13.0323C47.2245 13.037 47.021 12.7842 47.021 12.0635Z"
+                      fill="white"
+                    />
+                    <path
+                      d="M50.8499 8.31953V7.24407H49.2881V14.2641H50.9243V10.9881C50.9243 10.2393 51.0471 9.74506 51.2882 9.38002C51.5911 8.94197 52.0244 8.67708 52.7756 8.68551C52.9783 8.68903 53.18 8.7205 53.3741 8.77911V7.24407C53.1809 7.1814 52.9788 7.14985 52.7756 7.15044C51.8143 7.15327 51.2702 7.56231 50.8499 8.31953Z"
+                      fill="white"
+                    />
+                    <path
+                      d="M59.6398 12.3443V9.81713C59.6398 8.72013 59.4941 8.14449 59.0608 7.7364C58.5961 7.28618 57.9293 7.06154 56.9804 7.06154C55.2065 7.06154 54.0873 7.90394 53.9755 9.42401L55.5424 9.56441C55.6257 8.79127 56.0021 8.35509 56.8546 8.35509C57.2879 8.35509 57.6228 8.44869 57.818 8.64993C58.0131 8.85117 58.084 9.10015 58.084 9.49233V9.86673C56.9804 9.93787 55.6397 10.1344 54.9554 10.4433C54.1318 10.8233 53.6846 11.4139 53.6846 12.3153C53.6846 13.5667 54.578 14.3689 55.8488 14.3689C56.8401 14.3689 57.5939 14.0179 58.1249 13.3711C58.2762 14.0703 58.7654 14.3286 59.6394 14.3286C59.8914 14.3338 60.143 14.2957 60.3831 14.2163V13.1493C59.7546 13.2635 59.6449 12.8919 59.6398 12.3443ZM58.084 11.2904C58.069 11.6835 58.0001 12.0776 57.7761 12.4014C57.469 12.8647 56.9525 13.1324 56.324 13.1324C55.5978 13.1324 55.2624 12.7524 55.2624 12.247C55.2624 11.8529 55.4295 11.5852 55.8628 11.3887C56.352 11.15 57.2879 11.0087 58.084 10.9665V11.2904Z"
+                      fill="white"
+                    />
+                    <path
+                      d="M64.1202 13.0529C63.0465 13.0529 62.4041 12.2386 62.4041 10.6942C62.4041 9.13572 63.1299 8.41968 64.0772 8.41968C64.7326 8.41968 65.2347 8.72856 65.4309 9.6552L66.8959 9.14976C66.5745 7.9002 65.6261 7.04373 64.1182 7.04373C62.0398 7.04373 60.728 8.43372 60.728 10.7222C60.728 13.0248 62.0118 14.4288 64.0343 14.4288C65.6151 14.4288 66.5325 13.5864 66.9378 12.4211L65.4729 11.9156C65.3061 12.6598 64.8599 13.0529 64.1202 13.0529Z"
+                      fill="white"
+                    />
+                    <path
+                      d="M70.0451 12.0635V8.56102H71.388V7.24407H70.0451V4.95929H68.4211L68.3919 7.24407H67.3052V8.56102H68.3946V12.3893C68.3946 13.037 68.4931 13.5302 68.7865 13.8681C69.0786 14.206 69.5296 14.3745 70.2116 14.3745C70.6205 14.3727 71.028 14.3196 71.424 14.2163V12.9059C71.2094 12.9859 70.9832 13.0286 70.7543 13.0323C70.2503 13.037 70.0451 12.7842 70.0451 12.0635Z"
+                      fill="#FFFBFB"
+                    />
+                    <path
+                      d="M8.81232 0.000147151C1.78086 -0.0187525 0.0186013 1.77672 0.000143779 8.9766C-0.0183138 16.1765 1.73428 17.9809 8.76573 17.9999C15.7972 18.0187 17.5603 16.2233 17.5788 9.0234C17.5972 1.82352 15.8437 0.0190468 8.81232 0.000147151ZM7.34719 13.922C6.68167 13.922 6.03119 13.72 5.47788 13.3414C4.92461 12.9628 4.49336 12.4248 4.23869 11.7953C3.98405 11.1658 3.91742 10.473 4.04724 9.80474C4.17706 9.13644 4.4975 8.52264 4.96803 8.04074C5.43857 7.55892 6.03808 7.23082 6.69073 7.0979C7.34346 6.96501 8.01992 7.0332 8.6347 7.29396C9.24949 7.55474 9.77495 7.99632 10.1447 8.56282C10.5144 9.12938 10.7117 9.79553 10.7117 10.4769C10.7105 11.3902 10.3557 12.2658 9.72496 12.9116C9.09421 13.5575 8.23911 13.9208 7.34719 13.922ZM13.4584 13.7807H11.8103V5.90674H4.1197V4.21928H13.4584V13.7807Z"
+                      fill="white"
+                    />
+                    <path
+                      d="M7.22452 8.64C6.86541 8.64 6.51441 8.74721 6.21582 8.94809C5.91723 9.1489 5.68454 9.43445 5.54712 9.76846C5.40971 10.1025 5.37372 10.47 5.4438 10.8246C5.51383 11.1792 5.68678 11.505 5.9407 11.7606C6.19461 12.0162 6.51811 12.1904 6.8703 12.2609C7.22249 12.3314 7.58758 12.2952 7.91932 12.1568C8.25107 12.0185 8.53465 11.7842 8.73415 11.4836C8.93364 11.183 9.04015 10.8295 9.04015 10.468C9.0396 9.98338 8.84819 9.51869 8.50782 9.17597C8.16745 8.83325 7.7059 8.6405 7.22452 8.64Z"
+                      fill="white"
+                    />
+                  </g>
+                  <defs>
+                    <clipPath id="clip0_10_2">
+                      <rect width="72" height="18" fill="white" />
+                    </clipPath>
+                  </defs>
+                </svg>
+              </div>
             </a>
           </li>
           <li class="flex items-center">
@@ -105,44 +107,46 @@
             ></line>
           </svg>
         </div>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="mt-[.4rem] lg:hidden"
-          width="36"
-          height="36"
-          viewBox="0 0 23 23"
-          fill="none"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          class="feather feather-menu"
-        >
-          <line
-            x1="3"
-            y1="12"
-            x2="21"
-            y2="12"
-            id="id_101"
-            style="stroke: rgb(255, 255, 255)"
-          ></line>
-          <line
-            x1="3"
-            y1="6"
-            x2="21"
-            y2="6"
-            id="id_102"
-            style="stroke: rgb(255, 255, 255)"
-          ></line>
-          <line
-            x1="3"
-            y1="18"
-            x2="21"
-            y2="18"
-            id="id_103"
-            style="stroke: rgb(255, 255, 255)"
-          ></line>
-        </svg>
+        <div>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="mt-[.4rem] lg:hidden"
+            width="36"
+            height="36"
+            viewBox="0 0 23 23"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="feather feather-menu"
+          >
+            <line
+              x1="3"
+              y1="12"
+              x2="21"
+              y2="12"
+              id="id_101"
+              style="stroke: rgb(255, 255, 255)"
+            ></line>
+            <line
+              x1="3"
+              y1="6"
+              x2="21"
+              y2="6"
+              id="id_102"
+              style="stroke: rgb(255, 255, 255)"
+            ></line>
+            <line
+              x1="3"
+              y1="18"
+              x2="21"
+              y2="18"
+              id="id_103"
+              style="stroke: rgb(255, 255, 255)"
+            ></line>
+          </svg>
+        </div>
         <a class="hidden mr-6 bg-blue-200 lg:inline w-14 h-14" href="#"
           >Submit a request</a
         >
@@ -151,22 +155,42 @@
     </header>
     <main class="font-GT-America">
       <section
-        class="flex flex-col items-center justify-center px-[.85rem] pb-[7.3rem] pt-20 bg-blue-100"
+        class="flex flex-col items-center justify-center px-[.85rem] pb-[7.35rem] pt-20 bg-blue-100"
       >
-        <h1
-          class="tracking-[-.25rem] text-[2.5rem] font-medium leading-10 text-black"
-        >
+        <h1 class="tracking-[-.25rem] text-[2.5rem] font-medium leading-10">
           How can we help?
         </h1>
-        <form action="submit">
+        <form class="relative w-full" action="submit">
           <input
-            class="w-full shadow-[0px_7px_20px_2px_#b9c3cc] border-solid text-[1.28rem] mt-[3.12rem] py-4 border-[1px] px-4 border-black rounded-md"
+            class="w-full shadow-[0px_7px_20px_2px_#b9c3cc] border-solid text-[1.29rem] mt-[3.12rem] py-4 border-[1px] px-4 border-black rounded-md"
             type="search"
             placeholder="Search"
             name="search"
             id="search_input"
           />
-          <input type="submit" value="" />
+          <input
+            class="absolute bg-blue-200 size-12 right-3 top-[3.7rem]"
+            type="submit"
+            value=""
+          />
+          <div>
+            <svg
+              class="absolute right-3 top-[3.7rem]"
+              xmlns="http://www.w3.org/2000/svg"
+              width="2em"
+              height=""
+              viewBox="0 0 24 24"
+            >
+              <path
+                fill="none"
+                stroke="black"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="1.5"
+                d="M4 12h16m0 0l-6-6m6 6l-6 6"
+              />
+            </svg>
+          </div>
         </form>
       </section>
       <section>
