--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,9 @@
         <ul class="flex flex-row">
           <li class="flex items-center justify-center">
             <a class="ml-4" href="https://www.abstract.com/">
-              <div>
+              <div class="w-[8.15rem] h-9">
                 <svg
-                  width="130"
-                  height="40"
-                  viewBox="0 4 73 10"
+                  viewBox="0 -1 73 19"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
                 >
@@ -74,15 +72,17 @@
           </li>
           <li class="flex items-center">
             <span class="text-[2rem] ml-[.45rem] mr-[.5rem] font-thin">|</span>
-            <a class="mt-1 m text-[1.45rem] font-semibold" href="./index.html"
+            <a
+              class="mt-[.35rem] m text-[1.45rem] font-semibold"
+              href="./index.html"
               >Help Center</a
             >
           </li>
         </ul>
-        <div class="mt-[.57rem] ml-[5.5rem] mr-[.4rem] size-9">
+        <div class="mt-[.65rem] ml-[5.5rem] mr-[.5rem] w-8 h-8">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 29 29"
+            viewBox="0 0 26 26"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
@@ -107,13 +107,11 @@
             ></line>
           </svg>
         </div>
-        <div>
+        <div class="w-9 h-9">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             class="mt-[.4rem] lg:hidden"
-            width="36"
-            height="36"
-            viewBox="0 0 23 23"
+            viewBox="0 0 22 22"
             fill="none"
             stroke="currentColor"
             stroke-width="2"
@@ -162,25 +160,19 @@
         </h1>
         <form class="relative w-full" action="submit">
           <input
-            class="w-full shadow-[0px_7px_20px_2px_#b9c3cc] border-solid text-[1.29rem] mt-[3.12rem] py-4 border-[1px] px-4 border-black rounded-md"
+            class="w-full shadow-[0px_7px_20px_2px_#b9c3cc] border-solid text-[1.29rem] mt-[3.12rem] py-4 border-[1px] px-4 border-black rounded-[.225rem]"
             type="search"
             placeholder="Search"
             name="search"
             id="search_input"
           />
           <input
-            class="absolute bg-blue-200 size-12 right-3 top-[3.7rem]"
+            class="absolute size-12 right-3 top-[3.7rem]"
             type="submit"
             value=""
           />
-          <div>
-            <svg
-              class="absolute right-3 top-[3.7rem]"
-              xmlns="http://www.w3.org/2000/svg"
-              width="2em"
-              height=""
-              viewBox="0 0 24 24"
-            >
+          <div class="absolute w-8 h-6 right-3 top-[4.3rem]">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25">
               <path
                 fill="none"
                 stroke="black"
