Add  main section styles

--- a/src/index.html
+++ b/src/index.html
@@ -185,65 +185,155 @@
           </div>
         </form>
       </section>
-      <section class="flex flex-col px-[2.65rem] py-28">
+      <section class="flex flex-col px-12 py-28">
         <div class="flex flex-row">
-          <div class="mr-7 w-44">
+          <div class="w-[4.15rem] mt-1 mr-7">
             <img src="/public/assets/icon-versions.png" alt="" />
           </div>
-          <div class="flex flex-col">
-            <p class="pb-4 text-2xl font-bold tracking-tight">Using Abstract</p>
+          <div class="flex flex-col w-64">
+            <p
+              class="pb-[.9rem] text-[#242424] text-[1.51rem] font-semibold tracking-tight"
+            >
+              Using Abstract
+            </p>
             <p class="text-2xl">
               Abstract lets you manage, version, and document your designs in
               one place.
             </p>
-            <a href="#">Learn More</a>
+            <div
+              class="flex flex-row mt-[1.2rem] text-[1.28rem] font-semibold text-blue-200"
+            >
+              <a href="#">Learn More</a>
+              <img
+                class="mt-[.1rem] ml-3 w-7"
+                src="/public/assets/slim-arrow.png"
+                alt=""
+              />
+            </div>
           </div>
         </div>
-        <div>
-          <div>
+        <div class="flex flex-row mt-[5.7rem]">
+          <div class="w-[4.15rem] mt-1 mr-7">
             <img src="/public/assets/icon-account.png" alt="" />
           </div>
-          <p>Manage your account</p>
-          <p>
-            Configure your account settings, such as your email, profile
-            details, and password.
-          </p>
-          <a href="#">Learn More</a>
+          <div class="flex flex-col w-64">
+            <p
+              class="pb-[.9rem] text-[1.51rem] text-[#242424] font-semibold tracking-tight"
+            >
+              Manage your account
+            </p>
+            <p class="text-2xl">
+              Configure your account settings, such as your email, profile
+              details, and password.
+            </p>
+            <div
+              class="flex flex-row mt-[1.2rem] text-[1.28rem] font-semibold text-blue-200"
+            >
+              <a href="#">Learn More</a>
+              <img
+                class="mt-[.1rem] ml-3 w-7"
+                src="/public/assets/slim-arrow.png"
+                alt=""
+              />
+            </div>
+          </div>
         </div>
-        <div>
-          <div class="w-[4.15rem] h-[4.7rem]">
+        <div class="flex flex-row mt-[5.7rem]">
+          <div class="w-[4.15rem] mt-1 mr-7">
             <img src="/public/assets/icon-organizations.png" alt="" />
           </div>
-          <p>Manage organizations, teams, and projects</p>
-          <p>
-            Use Abstract organizations, teams, and projects to organize your
-            people and your work.
-          </p>
-          <a href="#">Learn More</a>
+          <div class="flex flex-col w-64">
+            <p
+              class="pb-[.9rem] text-[1.51rem] text-[#242424] font-semibold tracking-tight"
+            >
+              Manage organizations, teams, and projects
+            </p>
+            <p class="text-2xl">
+              Use Abstract organizations, teams, and projects to organize your
+              people and your work.
+            </p>
+            <div
+              class="flex flex-row mt-[1.2rem] text-[1.28rem] font-semibold text-blue-200"
+            >
+              <a href="#">Learn More</a>
+              <img
+                class="mt-[.1rem] ml-3 w-7"
+                src="/public/assets/slim-arrow.png"
+                alt=""
+              />
+            </div>
+          </div>
         </div>
-        <div>
-          <div class="w-[4.15rem] h-[4.7rem]">
+        <div class="flex flex-row mt-[5.7rem]">
+          <div class="w-[4.3rem] mt-1 mr-7">
             <img src="/public/assets/icon-billing.png" alt="" />
           </div>
-          <p>Manage billing</p>
-          <p>Change subscriptions and payment details.</p>
-          <a href="#">Learn More</a>
+          <div class="flex flex-col w-64">
+            <p
+              class="pb-[.9rem] text-[1.51rem] text-[#242424] font-semibold tracking-tight"
+            >
+              Manage billing
+            </p>
+            <p class="text-2xl">Change subscriptions and payment details.</p>
+            <div
+              class="flex flex-row mt-[1.2rem] text-[1.28rem] font-semibold text-blue-200"
+            >
+              <a href="#">Learn More</a>
+              <img
+                class="mt-[.1rem] ml-3 w-7"
+                src="/public/assets/slim-arrow.png"
+                alt=""
+              />
+            </div>
+          </div>
         </div>
-        <div>
-          <div class="w-[4.15rem] h-[4.7rem]">
+        <div class="flex flex-row mt-[5.7rem]">
+          <div class="w-[4.3rem] mt-1 mr-7">
             <img src="/public/assets/icon-authenticate.png" alt="" />
           </div>
-          <p>Authenticate to Abstract</p>
-          <p>Set up and configure SSO, SCIM, and Just-in-Time provisioning.</p>
-          <a href="#">Learn More</a>
+          <div class="flex flex-col w-64">
+            <p
+              class="pb-[.9rem] text-[1.51rem] text-[#242424] font-semibold tracking-tight"
+            >
+              Authenticate to Abstract
+            </p>
+            <p class="text-2xl">
+              Set up an configure SSO, SCIM, and Just-in-Time provisioning.
+            </p>
+            <div
+              class="flex flex-row mt-[1.2rem] text-[1.28rem] font-semibold text-blue-200"
+            >
+              <a href="#">Learn More</a>
+              <img
+                class="mt-[.1rem] ml-3 w-7"
+                src="/public/assets/slim-arrow.png"
+                alt=""
+              />
+            </div>
+          </div>
         </div>
-        <div>
-          <div class="w-[4.15rem] h-[4.7rem]">
+        <div class="flex flex-row mt-24">
+          <div class="w-[4.3rem] mt-1 mr-7">
             <img src="/public/assets/icon-comment.png" alt="" />
           </div>
-          <p>Abstract support</p>
-          <p>Get in touch with a human.</p>
-          <a href="#">Learn More</a>
+          <div class="flex flex-col w-64">
+            <p
+              class="pb-[.9rem] text-[1.51rem] text-[#242424] font-semibold tracking-tight"
+            >
+              Abstract support
+            </p>
+            <p class="text-2xl">Get in touch with a human.</p>
+            <div
+              class="flex flex-row mt-[1.2rem] text-[1.28rem] font-semibold text-blue-200"
+            >
+              <a href="#">Learn More</a>
+              <img
+                class="mt-[.1rem] ml-3 w-7"
+                src="/public/assets/slim-arrow.png"
+                alt=""
+              />
+            </div>
+          </div>
         </div>
       </section>
     </main>
