--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link href="/public/output.css" rel="stylesheet" />
     <title>Abstract</title>
   </head>
-  <body class="debug-screens">
+  <body class="h-screen debug-screens">
     <header class="text-white font-GT-America">
       <nav class="flex w-full py-5 bg-black">
         <ul class="flex flex-row">
@@ -73,7 +73,7 @@
           <li class="flex items-center">
             <span class="text-[2rem] ml-[.45rem] mr-[.5rem] font-thin">|</span>
             <a
-              class="mt-[.35rem] m text-[1.45rem] font-semibold"
+              class="mt-[.35rem] text-[1.45rem] font-medium"
               href="./index.html"
               >Help Center</a
             >
@@ -337,54 +337,54 @@
         </div>
       </section>
     </main>
-    <footer class="font-GT-America">
-      <div>
-        <p>Abstract</p>
-        <a href="#">Start Trial</a>
-        <a href="#">Pricing</a>
-        <a href="#">Download</a>
+    <footer class="grid grid-cols-2 px-4 text-white bg-black font-GT-America">
+      <div class="flex flex-col font-semibold mt-11">
+        <p class="text-[1.51rem]">Abstract</p>
+        <a class="mt-2 text-[1.08rem]" href="#">Start Trial</a>
+        <a class="text-[1.08rem]" href="#">Pricing</a>
+        <a class="text-[1.08rem]" href="#">Download</a>
       </div>
-      <div>
-        <p>Resources</p>
-        <a href="#">Blog</a>
-        <a href="#">Help Center</a>
-        <a href="#">Release Notes</a>
-        <a href="#">Status</a>
+      <div class="flex flex-col mt-11">
+        <p class="text-[1.51rem] font-semibold">Resources</p>
+        <a class="mt-2 text-[1.08rem]" href="#">Blog</a>
+        <a class="text-[1.08rem]" href="#">Help Center</a>
+        <a class="text-[1.08rem]" text-lg href="#">Release Notes</a>
+        <a class="text-[1.08rem]" text-lg href="#">Status</a>
       </div>
-      <div>
-        <p>Community</p>
-        <a href="#">Twitter</a>
-        <a href="#">LinkedIn</a>
-        <a href="#">Facebook</a>
-        <a href="#">Dribble</a>
-        <a href="#">Podcast</a>
+      <div class="flex flex-col mt-11">
+        <p class="text-[1.51rem] font-semibold">Community</p>
+        <a class="mt-2 text-[1.08rem]" href="#">Twitter</a>
+        <a class="text-[1.08rem]" href="#">LinkedIn</a>
+        <a class="text-[1.08rem]" href="#">Facebook</a>
+        <a class="text-[1.08rem]" href="#">Dribble</a>
+        <a class="text-[1.08rem]" href="#">Podcast</a>
       </div>
-      <div>
-        <p>Company</p>
-        <a href="#">About Us</a>
-        <a href="#">Careers</a>
-        <a href="#">Legal</a>
+      <div class="flex flex-col mt-11">
+        <p class="text-[1.51rem] font-semibold">Company</p>
+        <a class="mt-2 text-[1.08rem]" href="#">Careers</a>
+        <a class="text-[1.08rem] hr-[1.08rem]" href="#">About Us</a>
+        <a class="text-[1.08rem]" href="#">Legal</a>
+        <p class="mt-7 text-[1.1rem] font-bold">Contact Us</p>
+        <a class="text-[1.08rem]" href="#">info@abstract.com</a>
       </div>
-      <p>Contact Us</p>
-      <a href="#">info@abstract.com</a>
-      <div>
-        <svg
-          width="37"
-          height="35"
-          viewBox="0 0 37 35"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M18.3358 -3.43039e-05C3.73577 -0.0367843 0.0766484 3.45446 0.0383234 17.4545C-1.55756e-06 31.4545 3.63905 34.9632 18.239 35C32.839 35.0367 36.5 31.5455 36.5383 17.5455C36.5767 3.54547 32.9358 0.0367157 18.3358 -3.43039e-05ZM15.2935 27.0707C13.9118 27.0707 12.5611 26.6778 11.4122 25.9417C10.2634 25.2056 9.36795 24.1594 8.83918 22.9353C8.31042 21.7112 8.17207 20.3643 8.44163 19.0648C8.7112 17.7653 9.37656 16.5717 10.3536 15.6348C11.3306 14.6979 12.5754 14.0599 13.9306 13.8014C15.2857 13.543 16.6904 13.6756 17.967 14.1826C19.2435 14.6897 20.3346 15.5483 21.1022 16.6499C21.8699 17.7516 22.2796 19.0468 22.2796 20.3717C22.2772 22.1477 21.5404 23.8503 20.2307 25.1061C18.9211 26.3619 17.1456 27.0684 15.2935 27.0707ZM27.9827 26.796H24.5609V11.4852H8.5921V8.20397H27.9827V26.796Z"
-            fill="black"
-          />
-          <path
-            d="M15.2935 16.954C14.5886 16.954 13.8995 17.1544 13.3133 17.53C12.7272 17.9055 12.2704 18.4393 12.0006 19.0638C11.7308 19.6883 11.6602 20.3755 11.7978 21.0385C11.9353 21.7015 12.2748 22.3105 12.7732 22.7885C13.2717 23.2664 13.9068 23.592 14.5982 23.7238C15.2896 23.8557 16.0062 23.788 16.6575 23.5293C17.3088 23.2707 17.8654 22.8326 18.2571 22.2706C18.6487 21.7085 18.8577 21.0477 18.8577 20.3718C18.8568 19.4656 18.4809 18.5968 17.8127 17.9561C17.1445 17.3153 16.2385 16.9549 15.2935 16.954Z"
-            fill="black"
-          />
-        </svg>
-        <p>
+      <div class="w-64 mt-10">
+        <div class="w-9 h-9">
+          <svg
+            viewBox="0 0 18 18"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M8.81232 0.000147151C1.78086 -0.0187525 0.0186013 1.77672 0.000143779 8.9766C-0.0183138 16.1765 1.73428 17.9809 8.76573 17.9999C15.7972 18.0187 17.5603 16.2233 17.5788 9.0234C17.5972 1.82352 15.8437 0.0190468 8.81232 0.000147151ZM7.34719 13.922C6.68167 13.922 6.03119 13.72 5.47788 13.3414C4.92461 12.9628 4.49336 12.4248 4.23869 11.7953C3.98405 11.1658 3.91742 10.473 4.04724 9.80474C4.17706 9.13644 4.4975 8.52264 4.96803 8.04074C5.43857 7.55892 6.03808 7.23082 6.69073 7.0979C7.34346 6.96501 8.01992 7.0332 8.6347 7.29396C9.24949 7.55474 9.77495 7.99632 10.1447 8.56282C10.5144 9.12938 10.7117 9.79553 10.7117 10.4769C10.7105 11.3902 10.3557 12.2658 9.72496 12.9116C9.09421 13.5575 8.23911 13.9208 7.34719 13.922ZM13.4584 13.7807H11.8103V5.90674H4.1197V4.21928H13.4584V13.7807Z"
+              fill="white"
+            />
+            <path
+              d="M7.22452 8.64C6.86541 8.64 6.51441 8.74721 6.21582 8.94809C5.91723 9.1489 5.68454 9.43445 5.54712 9.76846C5.40971 10.1025 5.37372 10.47 5.4438 10.8246C5.51383 11.1792 5.68678 11.505 5.9407 11.7606C6.19461 12.0162 6.51811 12.1904 6.8703 12.2609C7.22249 12.3314 7.58758 12.2952 7.91932 12.1568C8.25107 12.0185 8.53465 11.7842 8.73415 11.4836C8.93364 11.183 9.04015 10.8295 9.04015 10.468C9.0396 9.98338 8.84819 9.51869 8.50782 9.17597C8.16745 8.83325 7.7059 8.6405 7.22452 8.64Z"
+              fill="white"
+            />
+          </svg>
+        </div>
+        <p class="mt-5 text-xl">
           © Copyright 2024<br />
           Abstract Studio Design, Inc.<br />
           All rights reserved
