Add nav buttons styles

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="h-screen debug-screens">
     <header class="text-white font-GT-America">
-      <nav class="flex w-full py-5 bg-black lg:py-4 lg:px-20">
+      <nav class="flex w-full py-5 bg-black lg:py-[1.18rem] lg:px-20">
         <ul class="flex flex-row">
           <li class="flex items-center justify-center">
             <a class="ml-4" href="https://www.abstract.com/">
@@ -73,7 +73,7 @@
           <li class="flex items-center">
             <span class="text-[2rem] ml-[.45rem] mr-[.5rem] font-thin">|</span>
             <a
-              class="mt-[.35rem] text-[1.45rem] font-medium"
+              class="mt-[.35rem] lg:mt-[.3rem] text-[1.45rem] font-medium"
               href="./index.html"
               >Help Center</a
             >
@@ -146,12 +146,15 @@
           </svg>
         </div>
         <div
-          class="hidden lg:mt-[.17rem] mr-6 rounded-lg justify-center lg:flex items-center lg:h-[3.1rem] border-white border-[1px] bg-[#161616] lg:w-[14.5rem] lg:ml-80"
+          class="hidden lg:mr-4 rounded-lg justify-center lg:flex items-center lg:h-[3.15rem] border-white border-[1px] bg-[#161616] lg:w-[14.5rem] lg:ml-[28.6rem]"
         >
-          <a class="text-[1.4rem]" href="#">Submit a request</a>
+          <a class="text-[1.5rem] tracking-wide" href="#">Submit a request</a>
         </div>
-
-        <a class="hidden bg-blue-200 lg:inline h-14 w-14" href="#">Sign In</a>
+        <div
+          class="text-[1.5rem] hidden bg-blue-200 lg:h-[3.15rem] rounded-lg lg:flex lg:justify-center lg:items-center lg:w-[8.8rem]"
+        >
+          <a href="#">Sign In</a>
+        </div>
       </nav>
     </header>
     <main class="font-GT-America">
