Add search section desktop styles

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       <nav class="flex w-full py-5 bg-black lg:py-[1.18rem] lg:px-20">
         <ul class="flex flex-row">
           <li class="flex items-center justify-center">
-            <a class="ml-4" href="https://www.abstract.com/">
+            <a class="ml-[.85rem]" href="https://www.abstract.com/">
               <div class="w-[8.15rem] h-9">
                 <svg
                   viewBox="0 -1 73 19"
@@ -71,7 +71,7 @@
             </a>
           </li>
           <li class="flex items-center">
-            <span class="text-[2rem] ml-[.45rem] mr-[.5rem] font-thin">|</span>
+            <span class="text-[2rem] ml-[.47rem] mr-[.55rem] font-thin">|</span>
             <a
               class="mt-[.35rem] lg:mt-[.3rem] text-[1.45rem] font-medium"
               href="./index.html"
@@ -159,14 +159,16 @@
     </header>
     <main class="font-GT-America">
       <section
-        class="flex flex-col items-center justify-center px-[.85rem] pb-[7.35rem] pt-20 bg-blue-100"
+        class="flex flex-col items-center justify-center px-[.85rem] lg:px-[19.7rem] lg:pt-[7.75rem] lg:pb-[7.3rem] pb-[8rem] pt-20 bg-blue-100"
       >
-        <h1 class="tracking-[-.25rem] text-[2.5rem] font-medium leading-10">
+        <h1
+          class="tracking-[-.25rem] lg:tracking-[-.15rem] lg:text-[4.8rem] text-[2.5rem] font-medium leading-10"
+        >
           How can we help?
         </h1>
         <form class="relative w-full" action="submit">
           <input
-            class="w-full shadow-[0px_7px_20px_2px_#b9c3cc] border-solid text-[1.29rem] mt-[3.12rem] py-4 border-[1px] px-4 border-black rounded-[.225rem]"
+            class="w-full shadow-[0px_7px_20px_2px_#b9c3cc] border-solid text-[1.29rem] mt-[3.3rem] py-4 border-[1px] px-4 border-black rounded-[.225rem]"
             type="search"
             placeholder="Search"
             name="search"
@@ -177,7 +179,9 @@
             type="submit"
             value=""
           />
-          <div class="absolute w-8 h-6 right-3 top-[4.3rem]">
+          <div
+            class="absolute w-8 h-6 lg:w-7 lg:h-5 right-3 lg:right-[.85rem] lg:top-[4.6rem] top-[4.3rem]"
+          >
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25">
               <path
                 fill="none"
