--- a/src/index.html
+++ b/src/index.html
@@ -195,14 +195,16 @@
           </div>
         </form>
       </section>
-      <section class="flex flex-col px-12 py-28">
-        <div class="flex flex-row">
+      <section
+        class="flex flex-col px-12 lg:px-36 lg:flex-row lg:flex-wrap py-28 lg:py-40"
+      >
+        <div class="flex flex-row lg:w-1/2">
           <div class="w-[4.15rem] mt-1 mr-7">
             <img src="/public/assets/icon-versions.png" alt="" />
           </div>
-          <div class="flex flex-col w-64">
+          <div class="flex flex-col w-64 lg:w-96">
             <p
-              class="pb-[.9rem] text-[#242424] text-[1.51rem] font-semibold tracking-tight"
+              class="pb-[.9rem] text-[#242424] text-2xl font-semibold tracking-tight"
             >
               Using Abstract
             </p>
@@ -222,11 +224,11 @@
             </div>
           </div>
         </div>
-        <div class="flex flex-row mt-[5.7rem]">
+        <div class="flex lg:w-1/2 lg:mt-0 flex-row mt-[5.7rem]">
           <div class="w-[4.15rem] mt-1 mr-7">
             <img src="/public/assets/icon-account.png" alt="" />
           </div>
-          <div class="flex flex-col w-64">
+          <div class="flex flex-col w-64 lg:w-80">
             <p
               class="pb-[.9rem] text-[1.51rem] text-[#242424] font-semibold tracking-tight"
             >
@@ -248,7 +250,7 @@
             </div>
           </div>
         </div>
-        <div class="flex flex-row mt-[5.7rem]">
+        <div class="flex flex-row lg:w-1/2 mt-[5.7rem]">
           <div class="w-[4.15rem] mt-1 mr-7">
             <img src="/public/assets/icon-organizations.png" alt="" />
           </div>
